# model-vs-human

./: .gitignore  README.md  setup.cfg  setup.py
examples/: evaluate.py  plotting_definition.py  test_evaluate.py
latex-report/: neurips.sty  neurips_2020.sty  report.tex
latex-report/assets/: benchmark_figures.tex  benchmark_table_accuracy.tex  benchmark_table_humanlike.tex  benchmark_tables.tex  consistency_vs_accuracy.tex  error_consistency_lineplots.tex  error_consistency_matrices.tex  noise_generalisation.tex  nonparametric_accuracy.tex  shape_bias.tex
licenses/: CODE_LICENSE  LICENSES_OVERVIEW.md  MODEL_LICENSES
modelvshuman/: __init__.py  cli.py  constants.py  model_evaluator.py  utils.py  version.py
modelvshuman/datasets/: __init__.py  base.py  create_dataset.py  dataloaders.py  dataset_converters.py  decision_mappings.py  experiments.py  imagenet.py  info_mappings.py  noise_generalisation.py  registry.py  sketch.py  stylized.py  texture_shape.py
modelvshuman/evaluation/: evaluate.py  metrics.py
modelvshuman/helper/: __init__.py  human_categories.py  plotting_helper.py  wordnet_functions.py
modelvshuman/models/: __init__.py  registry.py
modelvshuman/plotting/: __init__.py  analyses.py  colors.py  decision_makers.py  plot.py
raw-data/colour/: colour_bagnet33_session-1.csv  colour_resnet50_session-1.csv  colour_simclr-resnet50x1_session-1.csv  colour_subject-01_session_1.csv  colour_subject-02_session_1.csv  colour_subject-03_session_1.csv  colour_subject-04_session_1.csv  colour_swag-regnety-128gf-in1k_session-1.csv  colour_swag-regnety-16gf-in1k_session-1.csv  colour_swag-regnety-32gf-in1k_session-1.csv  colour_swag-vit-b16-in1k_session-1.csv  colour_swag-vit-h14-in1k_session-1.csv  colour_swag-vit-l16-in1k_session-1.csv
raw-data/contrast/: contrast_bagnet33_session-1.csv  contrast_resnet50_session-1.csv  contrast_simclr-resnet50x1_session-1.csv  contrast_subject-01_session_1.csv  contrast_subject-02_session_1.csv  contrast_subject-03_session_1.csv  contrast_subject-04_session_1.csv  contrast_swag-regnety-128gf-in1k_session-1.csv  contrast_swag-regnety-16gf-in1k_session-1.csv  contrast_swag-regnety-32gf-in1k_session-1.csv  contrast_swag-vit-b16-in1k_session-1.csv  contrast_swag-vit-h14-in1k_session-1.csv  contrast_swag-vit-l16-in1k_session-1.csv
raw-data/cue-conflict/: cue-conflict_bagnet33_session-1.csv  cue-conflict_resnet50_session-1.csv  cue-conflict_simclr-resnet50x1_session-1.csv  cue-conflict_swag-regnety-128gf-in1k_session-1.csv  cue-conflict_swag-regnety-16gf-in1k_session-1.csv  cue-conflict_swag-regnety-32gf-in1k_session-1.csv  cue-conflict_swag-vit-b16-in1k_session-1.csv  cue-conflict_swag-vit-h14-in1k_session-1.csv  cue-conflict_swag-vit-l16-in1k_session-1.csv
raw-data/edge/: edge_bagnet33_session-1.csv  edge_resnet50_session-1.csv  edge_simclr-resnet50x1_session-1.csv  edge_swag-regnety-128gf-in1k_session-1.csv  edge_swag-regnety-16gf-in1k_session-1.csv  edge_swag-vit-b16-in1k_session-1.csv  (+3 more)
(+198 files in other folders)
