[metadata]
name = modelvshuman
version = 0.1
author =
author-email =
home-page = https://github.com/bethgelab/model-vs-human
description = Under development
long-description = file: README.md
long_description_content_type = text/markdown
license = model-vs-human/licenses/
license-file = COPYING
platform = any
keywords =
    Machine Learning
    Deep Learning
classifiers =
    Programming Language :: Python :: 3
    License :: model-vs-human/licenses/
    Operating System:: Unix
    Topic :: Scientific/Engineering :: Artificial Intelligence :: Image Recognition
project_urls =
    Bug Tracker = https://github.com/bethgelab/model-vs-human/issues
    Changelog = https://github.com/bethgelab/model-vs-human/blob/master/CHANGELOG.md

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.6
data_files =
packages = find:
test_suite = tests
setup_requires =
    setuptools
    # setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires =
    torch>=1.7.1
    torchvision>=0.8.2
    requests
    gdown
    scikit-image
    click
    dataclasses
    PySocks
    tensorflow_hub
    tensorflow>=2.4.0
    matplotlib>=3.3.2
    pandas>=1.5.3
    seaborn
    ftfy
    regex
    tqdm
    CLIP @ git+https://github.com/openai/CLIP#egg=CLIP
    pytorch_pretrained_vit
    tensorflow-estimator
    numexpr>=2.7.3
tests_require =
    pytest
dependency_links =
   https://download.pytorch.org/whl/torch_stable.html

[options.extras_require]
dev =
    docutils
    Pygments
test =
    green
    coverage
ci =
    # codacy-coverage
    # codecov

[options.package_data]
* =
    *.txt

[bdist_wheel]
universal = True

[check]
metadata = True
restructuredtext = True
strict = True

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError
    # raise MemoryError
    # if __name__ == .__main__.:
    # if typing.TYPE_CHECKING:

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = True
quiet-stdout = True
run-coverage = True

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = False
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
disallow_any_decorated = True
disallow_any_generics = True
disallow_any_unimported = False
disallow_subclassing_any = False
disallow_untyped_calls = True
disallow_untyped_defs = True
ignore_missing_imports = True
warn_unused_ignores = True
warn_return_any = True

[options.entry_points]
console_scripts =
    mvhEvaluate=modelvshuman.cli:main
